ALocation is now first-class object for Table and Partition
