# gometastore/hmsv2server/partition.go
@@ -37,6 +37,11 @@ func (s *metastoreServer) AddPartition(c context.Context,
 		return nil, fmt.Errorf("missing partition data")
 	}
 
+    // TODO: Remove compat mode for location
+    if partition.Location == "" && partition.Sd != nil {
+        partition.Location = partition.Sd.Location
+    }
+
 	// Construct partition name from values
 	values := strings.Join(partition.GetValues(), "/")
 	if values == "" {
@@ -121,6 +126,10 @@ func (s *metastoreServer) GetPartition(c context.Context,
 			return fmt.Errorf("no partition %s.%s/%s", dbName, tableName, values)
 		}
 		if err := proto.Unmarshal(data, &partition); err != nil {
+            // TODO: Remove compat mode for location
+            if partition.Location == "" && partition.Sd != nil {
+                partition.Location = partition.Sd.Location
+            }
 			return err
 		} else {
 			return nil
@@ -183,24 +192,26 @@ func (s *metastoreServer) ListPartitions(req *pb.ListPartitionsRequest,
 				for _, name := range req.GetFields() {
 					switch name {
 					case "location":
-						if partition.Sd != nil {
-							if part.Sd == nil {
-								part.Sd = &pb.StorageDescriptor{Location: partition.Sd.Location}
-							} else {
-								part.Sd.Location = partition.Sd.Location
-							}
-						}
+					    part.Location = partition.Location
+					    if part.Location == "" && partition.Sd != nil {
+					        part.Location = partition.Sd.Location
+                        }
 					case "parameters":
 						part.Parameters = partition.Parameters
 					case "values":
 						part.Values = partition.Values
 					}
 				}
+				log.Println("send", part)
 				if err := stream.Send(part); err != nil {
 					log.Println("err sending:", err)
 					return err
 				}
-				} else {
+			} else {
+                // TODO: Remove compat mode for location
+                if partition.Location == "" && partition.Sd != nil {
+                    partition.Location = partition.Sd.Location
+                }
 				if err := stream.Send(partition); err != nil {
 					log.Println("err sending:", err)
 					return err
